Fix stream text alignments

--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -51,7 +51,6 @@ h1 {
   font-size: 2.8em;
   font-weight: 300;
   margin-bottom: 20px;
-  margin-left: 33px;
   width: calc(100% - 450px);
 }
 .video-title {
