--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -74,16 +74,13 @@
       position: relative;
       margin-left: 60px;
       background: #fff;
-      padding: 15px;
+      padding: 25px 15px 25px 30px;
       border-radius: $base-border-radius;
       border-left: 3px solid $main-red;
       color: #373737;
 
       @include shadow-level(1);
 
-      h1 {
-        margin-left: 33px;
-      }
 
       &:before {
         content: '';
@@ -158,7 +155,6 @@
       }
 
       .description {
-        margin-left: 33px;
         margin-bottom: 50px;
         padding-right: 450px;
       }
